@@ -43,6 +43,7 @@ their authors that we used code from:
   Eric Hobbs <elhobbs@comcast.net>
   Marc Allaire <korskarn@hexenworld.com>
   "MH" (parts of DIB code) - http://mhquake.blogspot.com/
+  Mark Olsen <bigfoot@private.dk>
 
 More contributors (documentation & testing):
 --------------------------------------------
