@@ -1,0 +1,13 @@
+/* Sound support using Amiga AHI. */
+
+#if !defined(__HX2_SND_AHI)
+#define __HX2_SND_AHI
+
+#if HAVE_AHI_SOUND
+
+extern snd_driver_t snddrv_ahi;
+
+#endif	/* HAVE_AHI_SOUND */
+
+#endif	/* __HX2_SND_AHI */
+
