@@ -36,6 +36,7 @@
 #undef HAVE_DOS_SB_SOUND
 #undef HAVE_WIN_SOUND
 #undef HAVE_WIN_DX_SOUND
+#undef HAVE_AHI_SOUND
 
 #undef SOUND_NUMDRIVERS
 
@@ -89,7 +90,13 @@
 #define HAVE_DOS_SB_SOUND	0
 #endif
 
-#define SOUND_NUMDRIVERS	(HAVE_SDL_SOUND + HAVE_OSS_SOUND + HAVE_SUN_SOUND + HAVE_ALSA_SOUND + HAVE_WIN_SOUND + HAVE_WIN_DX_SOUND + HAVE_DOS_SB_SOUND + HAVE_DOS_GUS_SOUND)
+#if defined(PLATFORM_AMIGA)
+#define HAVE_AHI_SOUND		1
+#else
+#define HAVE_AHI_SOUND		0
+#endif
+
+#define SOUND_NUMDRIVERS	(HAVE_SDL_SOUND + HAVE_OSS_SOUND + HAVE_SUN_SOUND + HAVE_ALSA_SOUND + HAVE_WIN_SOUND + HAVE_WIN_DX_SOUND + HAVE_DOS_SB_SOUND + HAVE_DOS_GUS_SOUND + HAVE_AHI_SOUND)
 
 enum snddrv_id_t
 {
@@ -102,6 +109,7 @@ enum snddrv_id_t
 	SNDDRV_ID_DSOUND,
 	SNDDRV_ID_GUS_DOS,
 	SNDDRV_ID_SB_DOS,
+	SNDDRV_ID_AHI,
 	SNDDRV_ID_MAX
 };
 
